theme/site.less
//
// Site
// --------------------------------------------------


// To pick a different Bootswatch theme, update the include paths in the Gruntfile's less task.

// Theme
// -------------------------------
@import "variables.less";
@import "site_vars.less";
@import "mixins.less";


// Vendor libs and services
// -------------------------------

// Bootstrap's styles
@import "bootstrap.less";
@import "bootswatch.less";


// Components
// -------------------------------
@import "typography.less";
@import "anchors.less";
@import "button.less";
@import "callouts.less";
@import "masthead.less";
@import "header.less";
@import "highlight.less";
@import "footer.less";
@import "social-buttons.less";
@import "glyphicons.less";
@import "main-nav.less";
@import "sidenav.less";
@import "team.less";
@import "belt.less";
@import "toc.less";

// For the examples page so you can see how every component will be styled.
// Delete once you drop that page.
@import "examples.less";

// Site-overrides
// -------------------------------

// Override Bootstrap in favor of GitHub styles
pre {
  background: #F8F8FF;
}

.btn-popover {
  .glyphicon-question-sign {
    margin-left: 5px;
    font-size: 14px;
  }
}

.popover {
  .glyphicon {
    font-size: 12px;
    margin-left: 5px;
    color: @link-color;
  }
}

// Subhead needs to start after nav
body {
  position: relative; /* For scrollyspy */
//  padding-top: @navbar-height + @navbar-margin-bottom; /* Account for fixed navbar */
  padding-top: @navbar-height; /* Account for fixed navbar */
}

// Utilities must be last
@import "utilities.less";

